--- a/manifest.json
+++ b/manifest.json
@@ -21,12 +21,15 @@
             ]
         }
     ],
+    "icons": {
+        "48": "icons/48.png",
+        "128": "icons/128.png"
+    },
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "icon16.png",
-            "48": "icon48.png",
-            "128": "icon128.png"
+            "48": "icons/48.png",
+            "128": "icons/128.png"
         }
     }
 }
